syntax = "proto3";

package workflow;

message MetaData {
  string emoji = 1;
  string logo_url = 2;
  string thumbnail = 3;
}